--- a/app/src/main/res/layout-sw600dp/fragment_marketrates.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_marketrates.xml
@@ -88,15 +88,11 @@
 
 
         </RelativeLayout>
-
         <ListView
             android:id="@+id/listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/adView"
-            android:layout_below="@+id/date_layout">
-
-        </ListView>
+            android:layout_below="@+id/date_layout"></ListView>
 
         <!--<com.google.android.gms.ads.AdView-->
             <!--android:id="@+id/adView"-->
